# DA150X_kex

./: .gitignore  Makefile  README.md  a.exp  generate_data.py  graph_data.py  graph_popData.py  pop_size.py  run_data.py  test.prof
cpu/: CMakeLists.txt  README.md
cpu/problem/: 1.fjs  2.fjs  3.fjs  4.fjs  DataSetExplanation.txt
cpu/src/: decoded_solution.cc  decoded_solution.hh  encoded_solution.cc  encoded_solution.hh  genetic_algorithm.cc  genetic_algorithm.hh  main.cc  plot_gantt.py  problem.cc  problem.hh  stat_recorder.cc  stat_recorder.hh  tabu_search.cc  tabu_search.hh
cpu_and_gpu/src/: main.cpp
data/: layout.fjs  mk02.fjs  mk05.fjs  mk08.fjs
generate_data/: README.md
results/gtx1070/: mk01  mk02  mk03  mk04  mk05  mk06  mk07  mk08  mk09  mk10
results/gtx1650/: mk01  mk02  mk03  mk04  mk05  mk06  mk07  mk08  mk09  mk10
results/pop_size/gtx1070/: mk01pop100  mk01pop1000  mk01pop2000  mk01pop4000  mk01pop500  mk05pop100  mk05pop1000  mk05pop2000  mk05pop4000  mk05pop500  mk08pop100  mk08pop1000  mk08pop2000  mk08pop4000  mk08pop500
results/pop_size/ryzen/: mk01pop100  mk01pop1000  mk01pop2000  mk01pop4000  mk01pop500  mk05pop100  mk05pop1000  mk05pop2000  mk05pop4000  mk05pop500  mk08pop100  mk08pop1000  mk08pop2000  mk08pop4000  mk08pop500
results/ryzen/: mk01  mk02  mk03  mk04  mk05  mk06  mk07  mk08  mk09  mk10
src/: generate_data.cpp  generate_data.h  main.cpp  main.cu
